2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* testsuite/embed/Makefile.am:
	  Fix buildbot.

2005-01-09  Gergely Nagy  <algernon@bonehunter.rulez.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/libpng/gstpngenc.c: (gst_pngenc_class_init),
	(gst_pngenc_init), (gst_pngenc_chain), (gst_pngenc_get_property),
	(gst_pngenc_set_property):
	* ext/libpng/gstpngenc.h:
	  Add compression level property (#163323).

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* examples/capsfilter/capsfilter1.c: (main):
	* examples/seeking/spider_seek.c: (make_spider_pipeline):
	* ext/dvdread/Makefile.am:
	* ext/dvdread/demo-play:
	* ext/dvdread/demo-play.c:
	* gconf/gstreamer.schemas.in:
	* gst-libs/gst/gconf/gconf.c:
	* sys/v4l/TODO:
	* testsuite/Makefile.am:
	* testsuite/embed/Makefile.am:
	* testsuite/embed/embed.c: (cb_expose), (main):
	  Remove all references to xvideosink, fix examples (#140845).
	* gst/playback/gstplaybasebin.c: (group_destroy):
	  Apparently, disposal does not unlink - so do explicitely.
	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
	  Add debug.

2005-01-09  Maciej Katafiasz <mathrick@freedesktop.org>

	* README: fix PKG_CONFIG_PATH instructions, what was there
	previously was breaking default search path, not nice. 
	Fixes #163358

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/audioscale/gstaudioscale.c: (gst_audioscale_init),
	(gst_audioscale_chain):
	  %#^@^#@^@#^#@^#@^@#^@#^@#^@#^#@^#@^#@^@#^#@ fix seeking
	  when resampling - how the ^@$^!@^! is this possible?!?

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/alsa/gstalsa.c: (gst_alsa_change_state):
	  Reset variables on READY.
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_request_new_pad),
	(gst_matroska_mux_loop):
	  Require data before writing header.

2005-01-09  Francis Labonte  <francis_labonte@hotmail.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
